open-project/manifests/openproject/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openproject
  namespace: openproject
spec:
  selector:
    app: openproject
    component: web
  ports:
    - name: http
      port: 80
      targetPort: 8080
