open-project/manifests/openproject/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openproject
  namespace: openproject
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["openproject.bee.vn"]
      secretName: openproject-tls
  rules:
    - host: openproject.bee.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openproject
                port:
                  number: 80
